--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="renderer" content="webkit">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#0091e4">
-    <title>Yume</title>
+    <title>Akiyama_yume</title>
 
     <meta name="keywords" content="Yume,梦梦">
     <meta property="og:type" content="website">
@@ -60,17 +60,63 @@
         <div class="Container">
             <div>
                 <div class="Main_wrapper">
+                    <div class="Ribbon"></div>
                     <article class="IsYume">
-                        <div>
+                        <div class="Main">
+                            <div class="Profile">
+                                <div class="Pic Tip" data-tooltip="梦梦">
+                                    <img src="yume.jpg" alt="yume">
+                                </div>
+                                <div class="Rish">
+                                    <div>
+                                        <p class="Name">Akiyama_yume</p>
+                                        <span class="Sign">巨大ロボットが、大好きです~</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="Social_link">
+                                <div>
+                                    <a href="mailto://yume@gulucat.org" rel="noopener noreferrer">
+                                        <svg class="icon" aria-hidden="true"><use xlink:href="#LF_Mail"></use></svg>
+                                        <p>Email</p>
+                                    </a>
+                                    <a href="https://github.com/yume233" rel="noopener noreferrer" target="_blank">
+                                        <svg class="icon" aria-hidden="true"><use xlink:href="#LF_github"></use></svg>
+                                        <p>GitHub</p>
+                                    </a>
 
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="Rush">
+                            <div>
+                                <div class="Rua">
+                                    <div></div>
+                                </div>
+                                <div class="line"></div>
+                            </div>
                         </div>
                     </article>
                     <article class="Placeholder"></article>
                 </div>
             </div>
         </div>
+
+        <footer>
+            <div class="Foo_main">
+                <div class="Secondary">
+                    <div class="Ribbon"></div>
+                    <p>Copyright © 2019 <a class="LF Tip" href="https://www.lf112.net/" data-tooltip="Independent Websites Developer">LF112</a> All Rights Reserved.</p>
+                    <span class="Nbsp">/</span>
+                    <p>Presented to <a class="Tip" href="https://yume.gulucat.org" rel="noopener noreferrer" target="_blank" data-tooltip="梦梦">@Akiyama_yume</a></p>
+                </div>
+            </div>
+        </footer>
     </main>
 
+    <script src="https://at.alicdn.com/t/font_1411405_y79163j98ie.js"></script>
+    <script src="yume_app.js"></script>
 </body>
 
 </html>
